--- a/commuting_fig.tex
+++ b/commuting_fig.tex
@@ -21,7 +21,7 @@
     \node[] (a3') at (6,-3.5) {$a^2_3$};
     %\node[] (a4') at (6.5,-3.5) {a4'};
 
-    \node[] (ord) at (3,-1.3) {$\leq$};
+    \node[] (ord) at (3,-1.3) {$\preceq$};
 
   
     \path[every node/.style={font=\sffamily\small, fill=white,inner sep=1pt}, ->]
